# engine-3d-x11

./: .gitignore  CMakeLists.txt  Makefile  README.md  level.txt  main.cpp
Engine/: CMakeLists.txt  Core.h
Engine/include/: Config.h
Engine/include/App/: App.h  EntryPoint.h
Engine/include/Input/: Input.h
Engine/include/Math/: Math.h  Vec.h
Engine/include/Rendering/: Camera.h  Canvas.h  Config.h  Primitive.h  Renderer.h  Triangle.h  Window.h
Engine/include/Util/: Light.h  Time.h
Engine/include/World/: Level.h  Wall.h
Engine/src/App/: App.cpp
Engine/src/Input/: Input.cpp
Engine/src/Math/: Math.cpp  Vec.cpp
Engine/src/Rendering/: Camera.cpp  Canvas.cpp  Config.cpp  Primitive.cpp  Renderer.cpp  Triangle.cpp  Window.cpp
Engine/src/Util/: Light.cpp  Time.cpp
Engine/src/World/: Level.cpp  Wall.cpp
